# sms

./: .gitignore  Cargo.toml  Makefile  README.md  env-example  sms.http  sms.sql
assets/: index.html
assets/assets/: index-CT3B5o9V.js  index-DF5bUE-K.css
examples/: cors.rs
sms-ui/: env-example  index.html  package.json
sms-ui/assets/: index.html
sms-ui/assets/assets/: index-CDeCzp4R.css  index-DbTEV_-W.js
sms-ui/src/: App.tsx  fetch.ts  getAuthStorage.ts  index.css  main.tsx
sms-ui/src/components/: AdminLogin.tsx  Dialog.tsx  Loading.tsx  Marsk.tsx  MessageDetail.tsx  MessageDetailWithReply.tsx  State.tsx  Toast.tsx  TurnstileWidget.tsx
sms-ui/src/contexts/: StateContext.tsx
sms-ui/src/hooks/: useFetch.tsx  useStateContext.tsx
sms-ui/src/layout/: Backend.tsx  Frontend.tsx  Header.tsx  State.tsx
sms-ui/src/pages/: Detail.tsx  Home.tsx
sms-ui/src/pages/admin/: Detail.tsx  Home.tsx
sms-ui/src/types/: admin-auth-context.d.ts  auth.d.ts  fetch.d.ts  message.d.ts  pagination.d.ts  props.d.ts  resp.d.ts  state-context.d.ts
src/: admin_handler.rs  asset.rs  auth_handler.rs  config.rs  db.rs  email.rs  err.rs  handler.rs  jwt.rs  lib.rs  main.rs  mid.rs  model.rs  payload.rs  resp.rs  router.rs  sms.rs  state.rs  turnstile.rs  utils.rs
