[package]
name = "sms"
version = "0.1.0"
edition = "2024"
authors = ["axum.rs <team@mail.axum.eu.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/sms"
homepage = "https://axum.eu.org"
description = "向axum中文网管理员发送手机短信"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = [] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
anyhow = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8.7"
mime_guess = "2"
validator = { version = "0.20", features = ["derive"] }
xid = "1"

[dev-dependencies]
tower-http = { version = "0.6", features = ["cors"] }
